[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Stalactite/Stalaktit_R_w_outlines.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Stalactite/Stalaktit_L_w_outlines.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/StalactitesAndStalagmites/FallingStalactiteRigid.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/StalactitesAndStalagmites/FallingStalactites.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/StalactitesAndStalagmites/StalactiteDust.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 18.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 22.5 )

[node name="FallingStalactites" type="Node2D"]
script = ExtResource( 4 )
stalactiteDustTemplate = ExtResource( 5 )

[node name="StalactiteL" type="RigidBody2D" parent="."]
collision_layer = 16
collision_mask = 2
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="StalactiteL"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StalactiteL"]
position = Vector2( -10.5, -4.5 )
shape = SubResource( 1 )

[node name="Target" type="Node2D" parent="StalactiteL"]
position = Vector2( 12.426, 22 )

[node name="StalactiteR" type="RigidBody2D" parent="."]
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="StalactiteR"]
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StalactiteR"]
position = Vector2( 12.5, -0.5 )
shape = SubResource( 2 )

[node name="Target" type="Node2D" parent="StalactiteR"]
position = Vector2( -10.437, 14 )

[node name="RightStalTimer" type="Timer" parent="."]
one_shot = true

[node name="DustTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 3000 )
collision_mask = 3

[connection signal="body_entered" from="StalactiteL" to="StalactiteL" method="_on_Stalactite_body_entered"]
[connection signal="has_been_removed" from="StalactiteL" to="." method="check_if_stalactite_left"]
[connection signal="body_entered" from="StalactiteR" to="StalactiteR" method="_on_Stalactite_body_entered"]
[connection signal="has_been_removed" from="StalactiteR" to="." method="check_if_stalactite_left"]
[connection signal="timeout" from="RightStalTimer" to="." method="_on_RightStalTimer_timeout"]
[connection signal="timeout" from="DustTimer" to="." method="_on_DustTimer_timeout"]
